Fix tags wrapping into new lines

--- a/web/src/components/Tag/Tag.module.scss
+++ b/web/src/components/Tag/Tag.module.scss
@@ -8,6 +8,7 @@
   font-family: var(--title-family);
   font-size: var(--s-1);
   text-shadow: none;
+  white-space: nowrap;
 }
 
 .default {
